adiciona link para o email

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="contact__content">
                         <ul class="contact__content__list">
                             <li>
-                                <a class="contact__content__links" href="mailto:laerciofernandesmelonetoo@gmail.com" target="_blank">
+                                <a href="https://mail.google.com/mail/?view=cm&to=laerciofernandesmelonetoo@gmail.com" target="_blank">
                                     <img class="contact__content__image" src="./assets/gmail.png" alt="Logo Gmail">
                                 </a>
                             </li>
